--- a/tp1/imn430-tp1-e2014/IMN430-TP1/IMN430-TP1.vsproj/Tp1/Tp1/Tp1.vcxproj.filters
+++ b/tp1/imn430-tp1-e2014/IMN430-TP1/IMN430-TP1.vsproj/Tp1/Tp1/Tp1.vcxproj.filters
@@ -30,7 +30,13 @@
     <ClInclude Include="..\..\..\..\src\Vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\src\Voronoi.h">
+    <ClInclude Include="..\..\..\..\src\Tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\VoronoiDiagram.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -38,7 +44,7 @@
     <ClCompile Include="..\..\..\..\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\Voronoi.cpp">
+    <ClCompile Include="..\..\..\..\src\VoronoiDiagram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
